--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snake Game</title>
+    <link rel="icon" type="image/x-icon" href="snakelogo.jpg" />
 </head>
 <body>
-    
+    <div class="container">
+        <div class="dot"></div>
+        <div id="endgame" class="endgame" label="endgame"></div>
+    </div>
 </body>
 </html>
