--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="dot"></div>
+        <div id="dot" class="dot"></div>
         <div id="endgame" class="endgame" label="endgame"></div>
     </div>
     <script type="text/javascript" src="java.js"></script>
