--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="dot"></div>
-        <div id="endgame" class="endgame" label="endgame"></div>
+    <div class="container" id="container"> 
+
     </div>
     <script type="text/javascript" src="java.js"></script>
 </body>
