--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+    <div class="scoreBox" id="scoreId">Score</div>
     <div class="container" id="container"></div>
     <script type="text/javascript" src="java.js"></script>
 </body>
