--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-    <div class="container" id="container"></div>
+    <div class="scoreBox" id="scoreId">Score</div>
+    <div class="container" id="container"><button id="lost"><h1>you lost</h1></button></div>
     <script type="text/javascript" src="java.js"></script>
 </body>
 </html>
