--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="scoreBox" id="scoreId">Score</div>
-    <div class="container" id="container"><button id="lost"><h1>you lost</h1></button></div>
+    <div class="container" id="container"></div>
     <script type="text/javascript" src="java.js"></script>
 </body>
 </html>
