--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="scoreBox" id="scoreId">Score</div>
-    <div class="container" id="container"></div>
+    <div class="container" id="container">
+        <!-- <div id="lost">you lost<button>play again</button></div> -->
+    </div>
     <script type="text/javascript" src="java.js"></script>
 </body>
 </html>
