--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header>
     <div class="scoreBox" id="scoreId">Score</div>
+    </header>
     <div class="container" id="container">
-        <!-- <div id="lost">you lost<button>play again</button></div> -->
+        <div id="button1"><button class="button button1">Play Game</button></div>
     </div>
     <script type="text/javascript" src="java.js"></script>
 </body>
