--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Snake Game</title>
     <link rel="icon" type="image/x-icon" href="snakelogo.jpg" />
     <link rel="stylesheet" type="text/css" href="style.css">
+
+
 </head>
 <body>
+<audio id="sounds">
+
+  <source src="snakeSound.mp3" type="audio/mpeg">
+
+</audio>
     <div class="scoreBox" id="scoreId">Score</div>
     <div class="container" id="container"></div>
     <script type="text/javascript" src="java.js"></script>
