--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div id="papabear">
     <div class="scoreBox" id="scoreId">Score</div>
    
     <div class="container" id="container">
         <div id="button1"><button class="button button1">Play Game</button></div>
     </div>
+</div>
     <script type="text/javascript" src="java.js"></script>
 </body>
 </html>
