--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Snake Game</title>
     <link rel="icon" type="image/x-icon" href="snakelogo.jpg" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div id="papabear">
-    <div class="scoreBox" id="scoreId">Score</div>
+    <div class="scoreBox" id="scoreId">Score: 0</div>
    
     <div class="container" id="container">
         <div id="button1"><button class="button button1">Play Game</button></div>
